--- a/index.html
+++ b/index.html
@@ -20,22 +20,15 @@
       <div class="header">
         <div class="container">
           <a href="https://casinosenlignepro.com/"><h3>Casino Senligne Pro</h3></a>
-          <div class="nav">
-            <ul>
-              <a href="https://casinosenlignepro.com/#sites"><li>Top Sites</li></a>
-              <li class="dropdown-toggle">
-                Revues ↓
-                <div class="dropdown-menu">
-                  <a href="https://bwin.com" target="_blank"><img src="images/offer_bwin.svg" alt="Bwin"></a>
-                  <a href="https://unibet.com" target="_blank"><img src="images/offer_unibet.svg" alt="Unibet"></a>
-                  <a href="https://vbet.com" target="_blank"><img src="images/offer_vbet.svg" alt="Vbet"></a>
-                  <a href="https://betclic.com" target="_blank"><img src="images/offer_betclic.svg" alt="Betclic"></a>
-                </div>
-              </li>
+<div class="nav">
+  <ul>
+    <li><a href="./paiement-rapide.html">Paiement Rapide</a></li>
+    <li><a href="./sites-populaires-france.html">Sites Populaires en France</a></li>
+    <li><a href="./sites-fiables-verifies.html">Sites Fiables et Vérifiés</a></li>
+    <li><a href="./nouveaux-casinos.html">Nouveaux Casinos Recommandés</a></li>
+  </ul>
+</div>
 
-              <a href="https://casinosenlignepro.com/contact.php"><li>Contact</li> </a>
-            </ul>
-          </div>
         </div>
       </div>
     </header>
@@ -255,22 +248,6 @@
     <footer class="footer">
       <div class="container">
         <a href="https://casinosenlignepro.com/"><h3>Casino Senligne Pro</h3></a>
-        <div class="footer-menu">
-          <div class="nav">
-            <ul>
-              <li>
-                <a href="https://casinosenlignepro.com/paiments.php">Paiements Rapides et Simples</a>
-              </li>
-              <li>
-                <a href="https://casinosenlignepro.com/les-mieux.php">Les Mieux Notés par les Joueurs Français</a>
-              </li>
-              <li>
-                <a href="https://casinosenlignepro.com/sites-verifies.php">Sites Vérifiés Uniquement</a>
-              </li>
-              <li><a href="https://casinosenlignepro.com/nouveautes.php">Nouveautés – Juin 2025</a></li>
-            </ul>
-          </div>
-        </div>
         <div class="footer-info">
           <div class="footer-text">
             <p>
@@ -294,15 +271,15 @@
         <div class="footer-menu">
           <div class="nav">
             <ul>
-              <li><a href="https://casinosenlignepro.com/terms.php">Conditions Générales</a></li>
-              <li><a href="https://casinosenlignepro.com/responsible.php"> Jeu Responsable</a></li>
+              <li><a href="">Jeu responsable</a></li>
+              <li><a href="">Politique relative aux cookies</a></li>
               <li>
-                <a href="https://casinosenlignepro.com/privacy.php"> Politique de Confidentialité</a>
+                <a href="">Conditions d’utilisation</a>
               </li>
               <li>
-                <a href="https://casinosenlignepro.com/cookies.php">Politique relative aux cookies</a>
+                <a href="">Politique de confidentialité</a>
               </li>
-              <li><a href="https://casinosenlignepro.com/contact.php"> Contact</a></li>
+              <li><a href="">Contact</a></li>
             </ul>
           </div>
           <div class="coop"><p>Casino Senligne Pro © 2025</p></div>
