--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="header">
         <div class="container">
-          <a href="https://casinosenlignepro.com/"><h3>Casino Senligne Pro</h3></a>
+          <a href="./index.html"><h3>Casino Senligne Pro</h3></a>
 <div class="nav">
   <ul>
     <li><a href="./paiement-rapide.html">Paiement Rapide</a></li>
