change all name

--- a/nouveaux-casinos.html
+++ b/nouveaux-casinos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casino Senligne Pro</title>
+    <title>TopCasinosFrance-2025</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -19,7 +19,7 @@
 
       <div class="header">
         <div class="container">
-          <a href="./index.html"><h3>Casino Senligne Pro</h3></a>
+          <a href="./index.html"><h3>TopCasinosFrance-2025</h3></a>
 <div class="nav">
   <ul>
     <li><a href="./paiement-rapide.html">Paiement Rapide</a></li>
@@ -54,15 +54,15 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="https://casinosenlignepro.com/"><h3>Casino Senligne Pro</h3></a>
+        <a href="https://casinosenlignepro.com/"><h3>TopCasinosFrance-2025</h3></a>
         <div class="footer-info">
           <div class="footer-text">
             <p>
-              Casino Senligne Pro ne souhaite pas que ses informations soient
+              TopCasinosFrance-2025 ne souhaite pas que ses informations soient
               utilisées illégalement. Il vous revient de respecter l’âge légal
               et les conditions des opérateurs de jeu. En continuant à naviguer,
               vous acceptez nos conditions d’utilisation et notre politique de
-              confidentialité. Casino Senligne Pro soutient la lutte contre le
+              confidentialité. TopCasinosFrance-2025 soutient la lutte contre le
               jeu excessif avec SOS Joueurs (0810 600 115)
             </p>
             <p>
@@ -89,7 +89,7 @@
               <li><a href="#" id="contactLink">Contact</a></li>
             </ul>
           </div>
-          <div class="coop"><p>Casino Senligne Pro © 2025</p></div>
+          <div class="coop"><p>TopCasinosFrance-2025 © 2025</p></div>
         </div>
       </div>
     </footer>
